# Larp

./: .gitignore  LICENSE  README.md  larp.toml  presentation.ipynb  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  simulate.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
benchmark/: benchmark.toml  cities.toml  cli.py  vehicles.toml
benchmark/analysis/: analyze.py
benchmark/core/: replay.py  result.py  runner.py  scenario.py
benchmark/data/: config.py  registry.py  store.py
demos/: AdjacencyList.py  GenerateQuadTree.py  QuadTree.py
docs/: setup.md
docs/demos/Aerial Cargo Delivery/: presentation.ipynb
docs/demos/Hot Reloading in Room/: presentation.ipynb  walled_room.rgj
docs/demos/Lafayette City Hall/: city_hall.rgj  presentation.ipynb
docs/demos/Lafayette Court House/: city_court.rgj  city_hall.rgj  presentation.ipynb
docs/demos/Path Planning for Aerial Cargo Delivery/: example_requests.json  presentation.ipynb
docs/demos/Routes for Austin TX/: presentation.ipynb
docs/demos/Urban Air Mobility of EVTOL/: ntu_area.geojson
examples/Hot Reloading for Global Planning/: presentation.ipynb
examples/Occupancy Maps/: presentation.ipynb
examples/Urban Trajectory Planning/: simulate.py
files/: dynamics.py
larp/: __init__.py  backend.py  const.py  display.py  dynamics.py  field.py  fn.py  graph.py  hl.py  hr.py  io.py  network.py  pf.py  quad.py  types.py  utils.py
larp/environment/: __init__.py  environments.py  twin.py  visualizers.py
larp/mp/: __init__.py  planner.py  solver.py
larp/pp/: __init__.py  network.py  planner.py
larp/tp/: __init__.py  planner.py  solver.py
test/: __init__.py  data.geojson  data.quad.lp  data.rgj  data2.geojson  test_dynamics.py  test_fn.py  test_graph.py  test_hl.py  test_hr.py  test_io.py  test_loi.py  test_network.py  test_potential_field.py  test_q_potential_field.py  test_quad.py  test_rgj.py
test/mp/: test_solver.py
test/pp/: test_network.py  test_planner.py
test/tp/: test_planner.py  test_solver.py
